# gitlab-ci-mcp

./: .env.example  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  server.json
.github/workflows/: publish.yml
docs/: claude-code.md
evaluations/: README.md  questions.xml
src/gitlab_ci_mcp/: __init__.py  _mcp.py  ci_manager.py  errors.py  formatters.py  models.py  output.py  pagination.py  pipeline_health.py  resources.py  server.py
src/gitlab_ci_mcp/tools/: __init__.py  branches_tags.py  mrs.py  pipelines.py  repo.py  schedules.py
tests/: test_smoke.py  test_tools_mocked.py
